[gd_scene load_steps=12 format=3 uid="uid://beonflmqtctni"]

[ext_resource type="Script" uid="uid://c4m1w55d4epcw" path="res://player.gd" id="1_41uvr"]
[ext_resource type="Texture2D" uid="uid://bbdl6wjhv3o5a" path="res://assets/sprites/knight.png" id="2_a5deb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b2ui5"]
size = Vector2(14, 19)

[sub_resource type="Animation" id="Animation_2yv0k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_onrkg"]
resource_name = "damaged"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51]
}

[sub_resource type="Animation" id="Animation_i3pqv"]
resource_name = "dead"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [56, 57, 58, 59]
}

[sub_resource type="Animation" id="Animation_awrrq"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_ih74l"]
resource_name = "roll"
length = 0.55
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667, 0.533333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [48, 41, 42, 43, 44, 45, 46, 47, 48]
}

[sub_resource type="Animation" id="Animation_btl3k"]
resource_name = "walk"
length = 1.05
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667, 0.533333, 0.6, 0.666667, 0.733333, 0.8, 0.866667, 0.933333, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5dm4q"]
_data = {
&"RESET": SubResource("Animation_2yv0k"),
&"damaged": SubResource("Animation_onrkg"),
&"dead": SubResource("Animation_i3pqv"),
&"idle": SubResource("Animation_awrrq"),
&"roll": SubResource("Animation_ih74l"),
&"walk": SubResource("Animation_btl3k")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mi6m1"]
size = Vector2(14, 8)

[node name="Player" type="CharacterBody2D"]
collision_mask = 268
script = ExtResource("1_41uvr")
metadata/_edit_group_ = true

[node name="NormalHitbox" type="CollisionShape2D" parent="."]
position = Vector2(-1, 2.5)
shape = SubResource("RectangleShape2D_b2ui5")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_a5deb")
hframes = 8
vframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_5dm4q")
}

[node name="RollTimer" type="Timer" parent="."]
wait_time = 0.55

[node name="RollingHitbox" type="CollisionShape2D" parent="."]
position = Vector2(-1, 8)
shape = SubResource("RectangleShape2D_mi6m1")

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.6

[node name="StartTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="RollTimer" to="." method="_on_roll_timer_timeout"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
